fix color contrast and validate accessibility with lighthouse

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,11 +11,11 @@ body {
   color: var(--text-primary);
 }
 
-html, body {
+html,
+body {
   max-width: 100%;
   overflow-x: hidden;
-}/**/
-
+} /**/
 
 :root {
   --bg-main: #ffffff;
@@ -61,7 +61,7 @@ html, body {
 }
 
 .hero-header p {
-  color:white;
+  color: white;
   font-size: 1.2rem;
   margin-top: 12px;
 }
@@ -78,10 +78,10 @@ html, body {
   width: min(520px, 92vw);
 }
 .hero-section::after {
-  content: "";
+  content: '';
   position: absolute;
   inset: 0;
-  background: rgba(0,0,0,0.45);
+  background: rgba(0, 0, 0, 0.45);
 }
 .hero-overlay {
   position: absolute;
@@ -97,7 +97,7 @@ html, body {
   --text-secondary: #9ca3af;
 
   --accent: #5a7d7c;
-  --accent-hover: #6f9a98;
+  --accent-hover: #3f6f6d; /**/
 
   --border-soft: rgba(255, 255, 255, 0.05);
   --shadow-soft: 0 10px 30px rgba(0, 0, 0, 0.6);
@@ -142,15 +142,14 @@ nav a:hover {
   background: rgba(255, 255, 255, 0.08); /* genomskinlig */
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px); /* safari */
-  
+
   border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: 16px;
 
   padding: 2rem;
   color: white;
 
-  box-shadow:
-    0 8px 32px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
 }
 
 .section-heading {
@@ -205,7 +204,7 @@ button,
 nav a {
   min-width: 44px;
   min-height: 44px;
-}/**/
+} /**/
 
 #workout-input {
   flex: 1;
@@ -369,26 +368,26 @@ main,
 body {
   font-family: 'Inter', system-ui, sans-serif;
   font-display: swap;
-/* -------------- Generate workout -------------- */
+  /* -------------- Generate workout -------------- */
 
-.workout-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 1rem;
-  border: 3px solid var(--border-soft);
-}
+  .workout-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1rem;
+    border: 3px solid var(--border-soft);
+  }
 
-.workout-table th,
-.workout-table td {
-  padding: 10px;
-  text-align: center;
-  border-bottom: 1px solid #ddd;
-}
+  .workout-table th,
+  .workout-table td {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+  }
 
-.workout-table th {
-  background: #111;
-  color: white;
-}
+  .workout-table th {
+    background: #111;
+    color: white;
+  }
 }
 
 /* Utility classes */
